Fix imagepicker placeholder gap

--- a/packages/survey-creator-core/src/components/image-item-value.scss
+++ b/packages/survey-creator-core/src/components/image-item-value.scss
@@ -39,6 +39,7 @@
   top: var(--sjs-spacing-x100, 8px);
   padding: 0 var(--sjs-spacing-x100, 8px);
   z-index: 2;
+  gap: var(--sjs-spacing-x100, 8px);
   --sd-action-bar-gap: var(--sjs-spacing-x100, 8px);
 }
 
